frontend/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hybrid-cloud-frontend
  name: hybrid-cloud-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hybrid-cloud-frontend
  template:
    metadata:
      labels:
        app: hybrid-cloud-frontend
    spec:
      containers:
        - env:
            - name: "KUBERNETES_NAMESPACE"
              valueFrom:
                fieldRef:
                  fieldPath: "metadata.namespace"
          image: "quay.io/rhdevelopers/hybrid-cloud-frontend:1.0.0"
          imagePullPolicy: "IfNotPresent"
          name: "hybrid-cloud-frontend"
          ports:
            - containerPort: 8080
              name: "http"
              protocol: "TCP"
          resources:
            limits:
              cpu: "250m"
              memory: "500Mi"
      serviceAccount: hybrid-cloud-frontend
